testdata/baselines/reference/submodule/compiler/clodulesDerivedClasses.errors.txt
clodulesDerivedClasses.ts(9,7): error TS2417: Class static side '{ new(): Path; Utils: { convert2: () => Path; }; prototype: Path; }' incorrectly extends base class static side '{ Utils: { convert: () => Shape; }; prototype: Shape; }'.
  Types of property 'Utils' are incompatible.
    Property 'convert' is missing in type '{ convert2: () => Path; }' but required in type '{ convert: () => Shape; }'.


==== clodulesDerivedClasses.ts (1 errors) ====
    class Shape {
        id: number;
    }
    
    module Shape.Utils {
        export function convert(): Shape { return null;}
    }
    
    class Path extends Shape {
          ~~~~
!!! error TS2417: Class static side '{ new(): Path; Utils: { convert2: () => Path; }; prototype: Path; }' incorrectly extends base class static side '{ Utils: { convert: () => Shape; }; prototype: Shape; }'.
!!! error TS2417:   Types of property 'Utils' are incompatible.
!!! error TS2417:     Property 'convert' is missing in type '{ convert2: () => Path; }' but required in type '{ convert: () => Shape; }'.
!!! related TS2728 clodulesDerivedClasses.ts:6:21: 'convert' is declared here.
        name: string;
    
    }
    
    module Path.Utils {
        export function convert2(): Path {
            return null;
        }
    }
    
    
    
    